Creacion de usuario
Funcionalidad lista de creacion de usuario

--- a/proyecto/public/index.html
+++ b/proyecto/public/index.html
@@ -74,6 +74,7 @@
             <li style="font-size:16px;"><a href="#">Descargar</a></li>
             <!--<li style="font-size:16px;"><a href="paraTrabajo.html">Para el Trabajo</a></li>-->
             <li style="font-size:16px;"><a href="#">Ayuda</a></li>
+            <li style="font-size:16px;"><a href="registrarse.html">Registrarse</a></li>
             <li style="background-color:#3CB371;"><a href="login.html"><button type="button" class="btn btn-link"  style="color:#fff; font-size:16px;">Acceder a AlquiTodo</button><span class="sr-only">(current)</span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -86,7 +87,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
        <div align="center" style="margin-top: 160px; margin-bottom: 160px; xs-hiden" class="col-lg-12-xs-12" >
-            <img src=""  style="width: 100px;" class="img-responsive"><h1 style="color:#fff; font-size:60px;">Todo lo que quieras alquilar<br>En un solo lugar<br>Estes donde estes.</h1><a href=""><button class="btn btn-primary"><h4>Ir a AlquiTodo</h4></button></a>
+            <img src=""  style="width: 100px;" class="img-responsive"><h1 style="color:#fff; font-size:60px;">Todo lo que quieras alquilar<br>En un solo lugar<br>Estes donde estes.</h1><a href="login.html"><button class="btn btn-primary"><h4>Ir a AlquiTodo</h4></button></a>
         </div>
            
         <div style="background-color:#fff;" class="col-lg-12 col-xs-12 contenido" align="center">
@@ -140,7 +141,7 @@
         <div align="center" style="background-color:#fff; border-top:1px groove; border-color:#fff; padding-top:150px; padding-bottom:150px;" class="col-lg-12 col-xs-12 contenido" >
           <img src=""  style="width:100px;">
             <h1 style="font-size:60px;">Empieza a usar AlquiTodo gratis</h1> 
-            <a href="entrarUsuario.php"><button class="btn btn-primary"><h4>Ir a AlquiTodo</h4></button></a>
+            <a href="login.html"><button class="btn btn-primary"><h4>Ir a AlquiTodo</h4></button></a>
             <div style="margin:30px;"><button type="button" class="btn btn-link"><h4>Obtén AlquiTodos en todos tus dispositivos ></h4></button></div>     
         </div>
 
