--- a/proyecto/public-alquilatodo/home.html
+++ b/proyecto/public-alquilatodo/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Otra</title>
-</head>
-<body>
-    <h1>Dentro de ALquilatodo</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Otra</title>
+    </head>
+    <body>
+        <h1>Este es le lugar para buscar tu producto</h1>
+    </body>
 </html>
