Crear Producto, cargar productos
Funcionalidades de cargar y crear productos lista

--- a/proyecto/public-alquilatodo/perfil.html
+++ b/proyecto/public-alquilatodo/perfil.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Alquitodo</title>
+        <link rel="icon" href="img/logo.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/css-boot/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/custom-edicion.css">
@@ -79,8 +80,8 @@
                 <div class="modal-body">
                     <h2>Nombre: </h2> <input id="nombre-modal" type="text" placeholder="Nombre" class="form-control">
                     <h2>Apellido: </h2> <input id="apellido-modal" type="text" placeholder="Apellido" class="form-control">
-                    <h2>Telefono: </h2> <input id="telefono-modal" type="text" placeholder="Nickname" class="form-control">
-                    <h2>Direccion: </h2> <input id="direccion-modal" type="text" placeholder="Nickname" class="form-control">
+                    <h2>Telefono: </h2> <input id="telefono-modal" type="text" placeholder="Telefono" class="form-control">
+                    <h2>Direccion: </h2> <input id="direccion-modal" type="text" placeholder="Direccion" class="form-control">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
