--- a/proyecto/public-alquilatodo/home.html
+++ b/proyecto/public-alquilatodo/home.html
@@ -85,6 +85,31 @@
             </div>
         </div>
 
+        <!-- Modal Detalles de un Producto -->
+        <div class="modal fade" id="detalles-producto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Detalles</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h2>Vendedor: </h2> <label>Oscar Nelson</label>
+                    <h2>Correo de contacto: </h2> <label>oscar@gmail.com</label>
+                    <h2>Telefono: </h2> <label>94688777</label>
+                    <h2>Producto: </h2> <label>El Samsiung</label>
+                    <h2>Precio: </h2> <label>2,500</label>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+                    <button id="btn-publicar-datos" type="button" class="btn btn-success">Publicar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/controlador-home.js"></script>
