--- a/proyecto/public-alquilatodo/home.html
+++ b/proyecto/public-alquilatodo/home.html
@@ -96,15 +96,14 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h2>Vendedor: </h2> <label>Oscar Nelson</label>
-                    <h2>Correo de contacto: </h2> <label>oscar@gmail.com</label>
-                    <h2>Telefono: </h2> <label>94688777</label>
-                    <h2>Producto: </h2> <label>El Samsiung</label>
-                    <h2>Precio: </h2> <label>2,500</label>
+                    <h2>Vendedor: <span id="span-nombre"></span></h2><hr>
+                    <h2>Correo de contacto: <span id="span-correo"></span></h2><hr>
+                    <h2>Telefono: <span id="span-telefono"></span></h2><hr>
+                    <h2>Producto: <span id="span-nombre-producto"></span></h2><hr>
+                    <h2>Precio: <span id="span-precio"></span></h2>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
-                    <button id="btn-publicar-datos" type="button" class="btn btn-success">Publicar</button>
                 </div>
                 </div>
             </div>
